Remove unused iframe from iframe-target-link.html and add a new iframe in iframe.html for demonstration purposes.

--- a/pertemuan-04/iframes/iframe.html
+++ b/pertemuan-04/iframes/iframe.html
@@ -13,5 +13,7 @@
       width="300"
       title="Iframe Example"
     ></iframe>
+
+    <iframe src="https://nurulfikri.ac.id" height="200" width="300"></iframe>
   </body>
 </html>
